@@ -27,7 +27,6 @@ autodie                     = 0
 namespace::autoclean        = 0
 Log::Contextual             = 0.00300
 File::Path                  = 2.08
-File::Touch                 = 0.08
 DBIx::Class                 = 0.08121
 Moose                       = 1.0
 MooseX::Role::Parameterized = 0.18
