@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Remove dep on File::Touch
 
 0.002114  2012-05-07 08:05:20 America/Chicago
        - Correctly set the version deployed to the version requested on install
